Qubit docs constants reshuffle.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -423,7 +423,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 				<li>
 					<dt id=".help">help</dt>
 					<dd>
-						<code class="value-type">Function([ f: Function ]) ⇒ String</code>
+						<code class="value-type">Function ⇒ String</code>
 						Calls and returns the value of 
 						<code><a href="Q.html">Q</a>.<a href="#.help">help</a></code>,
 						passing <code><a href="Q.html">Q</a>.ComplexNumber</code> as the argument.
