--- a/Matrix.html
+++ b/Matrix.html
@@ -222,7 +222,7 @@ var a = new <a href="Q.html">Q</a>.Matrix(
 				<li>
 					<dt id=".help">help</dt>
 					<dd>
-						<code class="value-type">Function([ f: Function ]) ⇒ String</code>
+						<code class="value-type">Function ⇒ String</code>
 						Calls and returns the value of 
 						<code><a href="Q.html">Q</a>.<a href="#.help">help</a></code>,
 						passing <code><a href="Q.html">Q</a>.Matrix</code> as the argument.
