--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Q ⟩ ComplexNumber</title>
 		<meta charset="utf-8">
+		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
 		<meta name="description"          content="Q.js is quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
 		<meta name="keywords"             content="
