More Matrix docs definitions.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -426,7 +426,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dd>
 						<code class="value-type">Function ⇒ String</code>
 						Calls and returns the value of 
-						<code><a href="Q.html">Q</a>.<a href="#.help">help</a></code>,
+						<code><a href="Q.html">Q</a>.<a href="Q.html#help">help</a></code>,
 						passing <code><a href="Q.html">Q</a>.ComplexNumber</code> as the argument.
 					</dd>
 				</li>
